--- a/res/layout/layout_main.xml
+++ b/res/layout/layout_main.xml
@@ -36,141 +36,23 @@
             android:fontFamily="sans-serif-light"
             
              />
+
 	</RelativeLayout>
-		<LinearLayout android:gravity="center_vertical|center_horizontal"
-		     android:orientation="vertical" android:layout_width="fill_parent"
-		      android:layout_height="fill_parent">
-    	
-       <org.torproject.android.ImageProgressView
-		android:id="@+id/imgStatus"
-		android:layout_width="fill_parent"
-		android:layout_height="0dp"
-		android:layout_marginTop="40dp"
-		android:layout_weight="1"
-		android:src="@drawable/toroff"
-		android:layout_gravity="center_horizontal" />
-		
-	<TextView android:id="@+id/lblStatus"
-		android:text="@string/press_to_start"
-		android:gravity="center_horizontal"
-		android:textStyle="bold"
-		android:layout_width="fill_parent"
-		android:layout_height="50sp"
-		android:layout_marginBottom="20dp"
-		android:layout_marginLeft="30dp"
-		android:layout_marginRight="30dp"
-		android:textColor="#ffffff"
-		android:maxLines="2"
-		android:fontFamily="sans-serif-light"	
-		 />
-	
-	
-	    <RelativeLayout 
-		     android:id="@+id/rowTrafficDown" 
-		     android:layout_width="fill_parent"
-		      android:layout_height="wrap_content"
-		       android:orientation="horizontal"
-		       android:paddingLeft="3sp"
-		       android:paddingRight="3sp"
-		       
-		      >
-	    <TextView
-	    	android:id="@+id/trafficLabelDown"
-			android:textColor="#FFFFFFFF"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			 android:layout_alignParentLeft="true"
-			android:textSize="15sp"
-			android:text="@string/main_layout_download"
-			android:gravity="center_vertical"
-			android:textStyle="bold"
-			android:fontFamily="sans-serif-light" />
-	    <TextView
-			android:id="@+id/trafficLabelUp"
-			android:textColor="#FFFFFFFF"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			 android:layout_alignParentRight="true"
-			android:text="@string/main_layout_upload"
-			android:textSize="15sp"
-			android:gravity="center_vertical"
-			android:textStyle="bold"
-			android:fontFamily="sans-serif-light" />
-		
-		</RelativeLayout>
-		 <RelativeLayout 
-		     android:id="@+id/rowTrafficUp"
-		     android:layout_width="fill_parent"
-		      android:layout_height="wrap_content"
-		     	  android:paddingLeft="3sp"
-		       android:paddingRight="3sp"
-		       android:paddingBottom="3sp"
-		     
-		      >
-		<TextView
-			android:id="@+id/trafficDown"
-			android:textColor="#FF00B627"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			 android:layout_alignParentLeft="true"
-			android:textSize="15sp"
-			android:gravity="center_vertical"
-			android:textStyle="bold"
-			android:fontFamily="sans-serif-light"
-			 />
-		<TextView
-			android:id="@+id/trafficUp"
-			android:textColor="#FF00B627"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			 android:layout_alignParentRight="true"
-			android:textSize="15sp"
-			android:gravity="center_vertical"
-			android:textStyle="bold"
-			android:fontFamily="sans-serif-light"
-			 />
-		</RelativeLayout>
-</LinearLayout>
 
-	 <SlidingDrawer
-        android:layout_width="fill_parent"
-        android:id="@+id/SlidingDrawer"
-        android:handle="@+id/slideButton"
-        android:content="@+id/trafficLog"
-        android:padding="10dip"
-        android:layout_height="fill_parent"
-        android:orientation="vertical"
-        		android:gravity="bottom"
-        >
-          <Button
-              android:id="@+id/slideButton"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text="@string/menu_log" ></Button>
+    	<RelativeLayout
+    	    android:layout_width="match_parent"
+    	    android:layout_height="match_parent" >
 
-	<RelativeLayout android:id="@+id/trafficLog"
-		android:gravity="top"
-	    android:layout_width="fill_parent"
-	    android:visibility="invisible"
-	    android:layout_height="wrap_content"
-	    android:padding="6dp"
-	    android:layout_marginTop="6dp"
-	    android:background="#ee333333">
-	    
-		<TextView
-			android:id="@+id/orbotLog"
-			android:textColor="#FFFFFF"
-			android:textSize="12sp"
-			android:gravity="left"
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content"
-			android:layout_alignParentLeft="true"
-			android:layout_marginTop="10dp"
-			android:textIsSelectable="true"
-			android:fontFamily="sans-serif-light"
-			 />
-    </RelativeLayout>		
-    </SlidingDrawer>
+    		<ProgressBar
+    		    android:id="@+id/progressBar1"
+    		    style="?android:attr/progressBarStyleLarge"
+    		    android:layout_width="wrap_content"
+    		    android:layout_height="wrap_content"
+    		    android:layout_alignParentBottom="true"
+    		    android:layout_centerHorizontal="true"
+    		    android:layout_marginBottom="104dp" />
+
+    	</RelativeLayout>
        
 </FrameLayout>
 
